--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,11 +27,31 @@ dist.dir=dist
 dist.jar=${dist.dir}/JExcelCompi.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
-file.reference.jexcel-1.8-full.jar=../libs/jexcel-1.8-full.jar
+file.reference.comfyj-2.14.jar=/home/justo/NetBeansProjects/libs/comfyj-2.14.jar
+file.reference.jexcel-1.8-full.jar=/home/justo/NetBeansProjects/libs/jexcel-1.8-full.jar
+file.reference.jexcel-1.8.jar=/home/justo/NetBeansProjects/libs/jexcel-1.8.jar
+file.reference.jniwrap-3.12.jar=/home/justo/NetBeansProjects/libs/jniwrap-3.12.jar
+file.reference.poi-3.15.jar=../libs/poi-3.15.jar
+file.reference.poi-ooxml-3.15.jar=../libs/poi-ooxml-3.15.jar
+file.reference.poi-ooxml-schemas-3.15.jar=../libs/poi-ooxml-schemas-3.15.jar
+file.reference.slf4j-api-1.5.8.jar=/home/justo/NetBeansProjects/libs/slf4j-api-1.5.8.jar
+file.reference.slf4j-simple-1.5.8.jar=/home/justo/NetBeansProjects/libs/slf4j-simple-1.5.8.jar
+file.reference.winpack-3.12.jar=/home/justo/NetBeansProjects/libs/winpack-3.12.jar
+file.reference.xmlbeans-2.6.0.jar=../libs/xmlbeans-2.6.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.jexcel-1.8-full.jar}
+    ${file.reference.comfyj-2.14.jar}:\
+    ${file.reference.jexcel-1.8-full.jar}:\
+    ${file.reference.jexcel-1.8.jar}:\
+    ${file.reference.jniwrap-3.12.jar}:\
+    ${file.reference.slf4j-api-1.5.8.jar}:\
+    ${file.reference.slf4j-simple-1.5.8.jar}:\
+    ${file.reference.winpack-3.12.jar}:\
+    ${file.reference.poi-3.15.jar}:\
+    ${file.reference.poi-ooxml-3.15.jar}:\
+    ${file.reference.poi-ooxml-schemas-3.15.jar}:\
+    ${file.reference.xmlbeans-2.6.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
